# ImageProcessingLab

./: .gitignore  CMakeLists.txt  ImageLoop.cpp  ImageLoop.h  ImageProcessor.cpp  ImageProcessor.h  Kernel.cpp  Kernel.h  README.md  processImages.cpp
